[package]
name = "shroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
gloo-console = "0.2.3"
gloo-net = "0.2.5"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1.0.150", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = { version = "1.0.89" }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
yew = { version = "0.20.0", features = ["csr"] }
